feat: Implement refresh token functionality with creation, revocation, and expiration handling